# vivado-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml
.trellis/tasks/archive/2026-04/00-bootstrap-guidelines/: task.json
.trellis/workspace/NJ/: index.md  journal-1.md
docs/: AUDIT_REPORT.md  MIGRATION_0.1_to_0.2.md
scripts/: vivado_mcp_server.tcl
src/vivado_mcp/: __init__.py  __main__.py  install.py  server.py  tcl_scripts.py
src/vivado_mcp/analysis/: io_parser.py  ip_status_parser.py  project_parser.py  run_progress_parser.py  suggestion_engine.py  timing_parser.py  util_parser.py  verilog_compile_check.py  verilog_quick_check.py  violating_path_detector.py  warning_parser.py  warning_snapshot.py  xdc_auto_fixer.py  xdc_linter.py  xdc_parser.py
src/vivado_mcp/tools/: diagnostic_tools.py  flow_tools.py  report_tools.py  session_tools.py  tcl_tools.py
src/vivado_mcp/vivado/: base_session.py  gui_session.py  session.py  session_manager.py  tcl_utils.py
tests/: test_diagnostic_tools.py  test_protocol_regression.py  test_version.py
tests/analysis/: test_io_parser.py  test_ip_status_parser.py  test_project_parser.py  test_run_progress_parser.py  test_suggestion_engine.py  test_timing_parser.py  test_util_parser.py  test_verilog_compile_check.py  test_verilog_quick_check.py  test_warning_snapshot.py  test_xdc_auto_fixer.py  test_xdc_linter.py  test_xdc_parser.py
tests/fixtures/: sample_dict_xdc.xdc  sample_report_io_2019_1.txt  sample_violating_paths.txt
